tests/lean/root.lean.expected.out
Bla.f (x : Nat) : Nat
root.lean:21:14-21:22: error: protected declarations must be in a namespace
root.lean:29:4-29:10: error: invalid declaration name `_root_`, `_root_` is a prefix used to refer to the 'root' namespace
root.lean:31:0-31:32: error: invalid namespace '_root_', '_root_' is a reserved namespace
root.lean:33:0-33:34: error: invalid namespace 'f._root_', '_root_' is a reserved namespace
root.lean:35:14-35:22: error: protected declarations must be in a namespace
root.lean:41:7-41:8: error: unknown identifier 'h'
root.lean:43:7-43:8: error: unknown identifier 'f'
Bla.f (x : Nat) : Nat
prv (x : Nat) : Nat
root.lean:90:89-90:93: error: unsolved goals
x : Nat
⊢ isEven (x + 1 + 1) = isEven x
root.lean:95:89-95:93: error: unsolved goals
x : Nat
⊢ isEven (x + 1 + 1) = isEven x
